templates/union-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: union-ingress
  namespace: union-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: union-service
            port:
              number: 3000
